--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,4 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+{{#dp-map zoom=14 on-center-change='map-center-changed'}}
+  {{dp-circle center=model.center}}
+  {{dp-marker position=model.center}}
+{{/dp-map}}
