Fix bug where child elements wouldn't load
After navigating away from the map route then back again, none of the
child elements loaded. They do now. Add new routes to dummy app to test.

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,4 +1,1 @@
-{{#dp-map zoom=14 on-center-change='map-center-changed'}}
-  {{dp-circle center=model.center}}
-  {{dp-marker position=model.center}}
-{{/dp-map}}
+{{outlet}}
